[package]
name = "rust_snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
rand = { version = "=0.8.5", features = ["small_rng"] }

[[bin]]
name = "union_find"
path = "src/union_find.rs"

[[bin]]
name = "rand"
path = "src/rand.rs"
